test/scc/stmt/semantic-errors/057.t
void test()
{
	int a = 5;
    switch(10)
    {
        case a:
            break;
    }
}